--- a/index.css
+++ b/index.css
@@ -11,6 +11,8 @@
 .logo {
   padding: 25px 0;
   margin-left: 80px;
+  color: #1b0f3e;
+  font-weight: 500;
 }
 .logo i {
   color: #fe4806;
@@ -24,9 +26,14 @@
   margin-right: 70px;
   padding: 25px 0;
 }
-.menu ul li :hover {
-  border-bottom: 1px solid #780cf3;
+.menu ul li a {
+  text-decoration: none;
+  color: #1b0f3e;
 }
+.menu ul li a:hover {
+  border-bottom: 2px solid #780cf3;
+}
+
 .menu ul li:last-child {
   margin-right: 0;
 }
@@ -45,4 +52,24 @@
 .leftHero {
   background-color: #93dbf1;
   width: 50%;
+}
+.heroText {
+  margin-top: 18%;
+  margin-left: 30%;
+  font-weight: 900;
+  font-size: 40px;
+  color: #1b0f3e;
+}
+.small-t {
+  font-size: 13px;
+  margin-left: 30%;
+  color: #1b0f3e;
+}
+.rightHero {
+  width: 50%;
+}
+.rightHero .resort-img {
+  width: 100%;
+  height: 600px;
+  background-size: 100% 100%;
 }
